src/main/java/antlr/YalacoParser.java
// Generated from D:/Users/Matu/Documents/NetBeansProjects/ANTLR-Compiler/src/main/antlr\Yalaco.g4 by ANTLR 4.9.1
package antlr;

	import java.util.HashMap;
    import java.util.ArrayList;
    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YalacoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, WHILE=3, FOR=4, STRING=5, LOGIC=6, PRINT=7, PRINTLN=8, TRUNC=9, 
		ASSIGN=10, EOL=11, ID=12, NUMBER=13, SUM=14, SUB=15, MUL=16, DIV=17, EXP=18, 
		MOD=19, GRE=20, LES=21, GEQ=22, LEQ=23, NEQ=24, EQU=25, AND=26, OR=27, 
		NOT=28, PAR_OPEN=29, PAR_CLOSE=30, BRK_OPEN=31, BRK_CLOSE=32, INC=33, 
		DEC=34, WS=35, NL=36, BC=37, LC=38;
	public static final int
		RULE_start = 0, RULE_statement = 1, RULE_assignStatement = 2, RULE_ifStatement = 3, 
		RULE_whileStatement = 4, RULE_printStatement = 5, RULE_printLineStatement = 6, 
		RULE_expression = 7, RULE_truncExpression = 8, RULE_data = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "statement", "assignStatement", "ifStatement", "whileStatement", 
			"printStatement", "printLineStatement", "expression", "truncExpression", 
			"data"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'while'", "'for'", null, null, "'print'", "'printline'", 
			"'trunc'", "'='", "';'", null, null, "'+'", "'-'", "'*'", "'/'", "'^'", 
			"'%'", "'>'", "'<'", "'>='", "'<='", "'!='", "'=='", "'&&'", "'||'", 
			"'!'", "'('", "')'", "'{'", "'}'", "'++'", "'--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "WHILE", "FOR", "STRING", "LOGIC", "PRINT", "PRINTLN", 
			"TRUNC", "ASSIGN", "EOL", "ID", "NUMBER", "SUM", "SUB", "MUL", "DIV", 
			"EXP", "MOD", "GRE", "LES", "GEQ", "LEQ", "NEQ", "EQU", "AND", "OR", 
			"NOT", "PAR_OPEN", "PAR_CLOSE", "BRK_OPEN", "BRK_CLOSE", "INC", "DEC", 
			"WS", "NL", "BC", "LC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Yalaco.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		HashMap<String, Object> tabla;

	public YalacoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YalacoVisitor ) return ((YalacoVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << STRING) | (1L << LOGIC) | (1L << PRINT) | (1L << PRINTLN) | (1L << TRUNC) | (1L << ID) | (1L << NUMBER) | (1L << NOT) | (1L << PAR_OPEN))) != 0)) {
				{
				{
				setState(20);
				statement();
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public AssignStatementContext assignStatement;
		public IfStatementContext ifStatement;
		public WhileStatementContext whileStatement;
		public PrintStatementContext printStatement;
		public PrintLineStatementContext printLineStatement;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public PrintLineStatementContext printLineStatement() {
			return getRuleContext(PrintLineStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YalacoVisitor ) return ((YalacoVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(44);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(26);
				((StatementContext)_localctx).expression = expression(0);
				 ((StatementContext)_localctx).node =  ((StatementContext)_localctx).expression.node; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(29);
				((StatementContext)_localctx).assignStatement = assignStatement();
				 ((StatementContext)_localctx).node =  ((StatementContext)_localctx).assignStatement.node; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(32);
				((StatementContext)_localctx).ifStatement = ifStatement();
				 ((StatementContext)_localctx).node =  ((StatementContext)_localctx).ifStatement.node; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(35);
				((StatementContext)_localctx).whileStatement = whileStatement();
				 ((StatementContext)_localctx).node =  ((StatementContext)_localctx).whileStatement.node; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(38);
				((StatementContext)_localctx).printStatement = printStatement();
				 ((StatementContext)_localctx).node =  ((StatementContext)_localctx).printStatement.node; 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(41);
				((StatementContext)_localctx).printLineStatement = printLineStatement();
				 ((StatementContext)_localctx).node =  ((StatementContext)_localctx).printLineStatement.node; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStatementContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public ExpressionContext expression;
		public TerminalNode ID() { return getToken(YalacoParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(YalacoParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EOL() { return getToken(YalacoParser.EOL, 0); }
		public AssignStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).enterAssignStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).exitAssignStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YalacoVisitor ) return ((YalacoVisitor<? extends T>)visitor).visitAssignStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignStatementContext assignStatement() throws RecognitionException {
		AssignStatementContext _localctx = new AssignStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			((AssignStatementContext)_localctx).ID = match(ID);
			setState(47);
			match(ASSIGN);
			setState(48);
			((AssignStatementContext)_localctx).expression = expression(0);
			setState(49);
			match(EOL);
			 ((AssignStatementContext)_localctx).node =  new AssignStatement((((AssignStatementContext)_localctx).ID!=null?((AssignStatementContext)_localctx).ID.getText():null), ((AssignStatementContext)_localctx).expression.node); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public StatementContext s1;
		public StatementContext s2;
		public TerminalNode IF() { return getToken(YalacoParser.IF, 0); }
		public TerminalNode PAR_OPEN() { return getToken(YalacoParser.PAR_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(YalacoParser.PAR_CLOSE, 0); }
		public List<TerminalNode> BRK_OPEN() { return getTokens(YalacoParser.BRK_OPEN); }
		public TerminalNode BRK_OPEN(int i) {
			return getToken(YalacoParser.BRK_OPEN, i);
		}
		public List<TerminalNode> BRK_CLOSE() { return getTokens(YalacoParser.BRK_CLOSE); }
		public TerminalNode BRK_CLOSE(int i) {
			return getToken(YalacoParser.BRK_CLOSE, i);
		}
		public TerminalNode ELSE() { return getToken(YalacoParser.ELSE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YalacoVisitor ) return ((YalacoVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifStatement);

		    ArrayList<ASTNode> ifBlock = new ArrayList<ASTNode>();
			ArrayList<ASTNode> elseBlock = new ArrayList<ASTNode>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(IF);
			setState(53);
			match(PAR_OPEN);
			setState(54);
			((IfStatementContext)_localctx).expression = expression(0);
			setState(55);
			match(PAR_CLOSE);
			setState(56);
			match(BRK_OPEN);
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(57);
				((IfStatementContext)_localctx).s1 = statement();
				 ifBlock.add(((IfStatementContext)_localctx).s1.node); 
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << STRING) | (1L << LOGIC) | (1L << PRINT) | (1L << PRINTLN) | (1L << TRUNC) | (1L << ID) | (1L << NUMBER) | (1L << NOT) | (1L << PAR_OPEN))) != 0) );
			setState(64);
			match(BRK_CLOSE);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(65);
				match(ELSE);
				setState(66);
				match(BRK_OPEN);
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(67);
					((IfStatementContext)_localctx).s2 = statement();
					 elseBlock.add(((IfStatementContext)_localctx).s2.node); 
					}
					}
					setState(72); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << STRING) | (1L << LOGIC) | (1L << PRINT) | (1L << PRINTLN) | (1L << TRUNC) | (1L << ID) | (1L << NUMBER) | (1L << NOT) | (1L << PAR_OPEN))) != 0) );
				setState(74);
				match(BRK_CLOSE);
				}
			}

			 ((IfStatementContext)_localctx).node =  new IfStatement(((IfStatementContext)_localctx).expression.node, ifBlock, elseBlock); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStatementContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public StatementContext s;
		public TerminalNode WHILE() { return getToken(YalacoParser.WHILE, 0); }
		public TerminalNode PAR_OPEN() { return getToken(YalacoParser.PAR_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(YalacoParser.PAR_CLOSE, 0); }
		public TerminalNode BRK_OPEN() { return getToken(YalacoParser.BRK_OPEN, 0); }
		public TerminalNode BRK_CLOSE() { return getToken(YalacoParser.BRK_CLOSE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).enterWhileStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).exitWhileStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YalacoVisitor ) return ((YalacoVisitor<? extends T>)visitor).visitWhileStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whileStatement);
		 ArrayList<ASTNode> statementBlock = new ArrayList<ASTNode>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(WHILE);
			setState(81);
			match(PAR_OPEN);
			setState(82);
			((WhileStatementContext)_localctx).expression = expression(0);
			setState(83);
			match(PAR_CLOSE);
			setState(84);
			match(BRK_OPEN);
			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85);
				((WhileStatementContext)_localctx).s = statement();
				 statementBlock.add(((WhileStatementContext)_localctx).s.node);
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << STRING) | (1L << LOGIC) | (1L << PRINT) | (1L << PRINTLN) | (1L << TRUNC) | (1L << ID) | (1L << NUMBER) | (1L << NOT) | (1L << PAR_OPEN))) != 0) );
			setState(92);
			match(BRK_CLOSE);
			 ((WhileStatementContext)_localctx).node =  new WhileStatement(((WhileStatementContext)_localctx).expression.node, statementBlock); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public TerminalNode PRINT() { return getToken(YalacoParser.PRINT, 0); }
		public TerminalNode PAR_OPEN() { return getToken(YalacoParser.PAR_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(YalacoParser.PAR_CLOSE, 0); }
		public TerminalNode EOL() { return getToken(YalacoParser.EOL, 0); }
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).enterPrintStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).exitPrintStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YalacoVisitor ) return ((YalacoVisitor<? extends T>)visitor).visitPrintStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_printStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(PRINT);
			setState(96);
			match(PAR_OPEN);
			setState(97);
			((PrintStatementContext)_localctx).expression = expression(0);
			setState(98);
			match(PAR_CLOSE);
			setState(99);
			match(EOL);
			 ((PrintStatementContext)_localctx).node =  new PrintStatement(((PrintStatementContext)_localctx).expression.node); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintLineStatementContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public TerminalNode PRINTLN() { return getToken(YalacoParser.PRINTLN, 0); }
		public TerminalNode PAR_OPEN() { return getToken(YalacoParser.PAR_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(YalacoParser.PAR_CLOSE, 0); }
		public TerminalNode EOL() { return getToken(YalacoParser.EOL, 0); }
		public PrintLineStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printLineStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).enterPrintLineStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).exitPrintLineStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YalacoVisitor ) return ((YalacoVisitor<? extends T>)visitor).visitPrintLineStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintLineStatementContext printLineStatement() throws RecognitionException {
		PrintLineStatementContext _localctx = new PrintLineStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_printLineStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(PRINTLN);
			setState(103);
			match(PAR_OPEN);
			setState(104);
			((PrintLineStatementContext)_localctx).expression = expression(0);
			setState(105);
			match(PAR_CLOSE);
			setState(106);
			match(EOL);
			 ((PrintLineStatementContext)_localctx).node =  new PrintLineStatement(((PrintLineStatementContext)_localctx).expression.node); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext e1;
		public Token op;
		public ExpressionContext expression;
		public TruncExpressionContext truncExpression;
		public DataContext data;
		public ExpressionContext e2;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode NOT() { return getToken(YalacoParser.NOT, 0); }
		public TruncExpressionContext truncExpression() {
			return getRuleContext(TruncExpressionContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public TerminalNode MUL() { return getToken(YalacoParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(YalacoParser.DIV, 0); }
		public TerminalNode SUM() { return getToken(YalacoParser.SUM, 0); }
		public TerminalNode SUB() { return getToken(YalacoParser.SUB, 0); }
		public TerminalNode GRE() { return getToken(YalacoParser.GRE, 0); }
		public TerminalNode LES() { return getToken(YalacoParser.LES, 0); }
		public TerminalNode GEQ() { return getToken(YalacoParser.GEQ, 0); }
		public TerminalNode LEQ() { return getToken(YalacoParser.LEQ, 0); }
		public TerminalNode EQU() { return getToken(YalacoParser.EQU, 0); }
		public TerminalNode NEQ() { return getToken(YalacoParser.NEQ, 0); }
		public TerminalNode AND() { return getToken(YalacoParser.AND, 0); }
		public TerminalNode OR() { return getToken(YalacoParser.OR, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YalacoListener ) ((YalacoListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YalacoVisitor ) return ((YalacoVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
				{
				setState(110);
				((ExpressionContext)_localctx).op = match(NOT);
				setState(111);
				((ExpressionContext)_localctx).expression = expression(9);

				 		((ExpressionContext)_localctx).node =  new LogicalExpression((((ExpressionContext)_localctx).op!=null?((ExpressionContext)_localctx).op.getText():null), ((ExpressionContext)_localctx).expression.node, null);
				 	
				}
				break;
			case TRUNC:
				{
				setState(114);
				((ExpressionContext)_localctx).truncExpression = truncExpression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).truncExpression.node; 
				}
				break;
			case STRING:
			case LOGIC:
			case ID:
			case NUMBER:
			case PAR_OPEN:
				{
				setState(117);
				((ExpressionContext)_localctx).data = data();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).data.node; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(160);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(158);
					_errHandler.sync(this);
